--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ asgiref==3.7.2
 Django==5.0.1
 django-tenants==3.6.1
 djangorestframework==3.14.0
+pillow==10.2.0
+psycopg2==2.9.9
+python-dotenv==1.0.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 tzdata==2023.4
